assets/scss/_nav.scss
//
// Main navbar
//

#skip-link {
    cursor: pointer;
    position: absolute;
    padding: 2px 4px 0;
    line-height: 1.5em;
    z-index: 11;
    @media(min-width: 1600px) {
        left: 71px;
    }
    @media(min-width: 992px) {
        top: -40px;
        &.active {
            top: -2px;
        }
    }
    @media(max-width: 991px) {
        font-size: 0.8em;
        top: -80px;
        &.active {
            top: -2px;
            left: 14px;
        }
    }
}

.td-navbar-cover {
    background: $primary;

    @include media-breakpoint-up(md) {
        background: transparent !important;

        .nav-link {
            text-shadow: 1px 1px 2px $dark;
        }

    }

    &.navbar-bg-onscroll .nav-link {
        text-shadow: none;
    }
}

.navbar-bg-onscroll {
    background: $primary !important;
    opacity: inherit;
}

.td-navbar {
    background: $primary;
    margin: 0;
    z-index: 32;

    @include media-breakpoint-up(lg) {
        position: fixed;
        top: 0;
        width: 100%;
        min-height: 5rem;
    }

    @media(max-width: 991px) {
        min-height: 3rem;
    }


    .navbar-brand {
        text-transform: none;
        .nav-link {
            display: inline-block;
            margin-right: -30px;
        }

        svg {
            display: inline-block;
            margin: 0;
            height: 20px;

            @media(max-width:991px) {
                margin: 0 10px;
            }
        }
    }

    .nav-link {
        text-transform: none;
        font-weight: $font-weight-normal;
        &:focus {
            color: white !important;
        }
    }

    @include media-breakpoint-down(md) {
        // padding-right: .5rem;
        // padding-left: .75rem;
        padding-left: 0;
        padding-right: 0;
        padding-bottom: 0;

        .td-navbar-nav-scroll {
            max-width: 100%;
            height: 2.5rem;
            margin-top: .25rem;
            overflow: hidden;
            font-size: .875rem;

            .nav-link {
                padding-right: .25rem;
                padding-left: 0;
            }

            .navbar-nav {
                padding-bottom: 2rem;
                overflow-x: auto;
                white-space: nowrap;
                -webkit-overflow-scrolling: touch;

            }
        }

        .navbar-brand {
            padding-left: 5px;
            svg {
                height: 19px;
                @media(max-width: 450px) {
                    height: 15px;
                }
                @media(max-width: 350px) {
                    height: 12px;
                }
            }
        }

        #menu-toggle {
            cursor: pointer;
            display: block;
            margin-right: 12px;
            &.isOpen {

                #menu-close {
                    display: block;
                }
                #menu-bars {
                    display: none;
                }
            }

            @-moz-document url-prefix() {
                top: 30px;
            }

            span {
                position: relative;
            }
            .menu-bar {
                width: 25px;
                height: 2px;
                margin: 0 0 5px;
                background: white;
                display: block;
            }
            #menu-close {
                display: none;
                height: 21px;
                width: 21px;
                margin-top: -2px;
                .a {
                    stroke: white;
                    stroke-width: 2px;
                }
            }
        }

    }
}

nav {
    z-index: 1000 !important;

    #theme-select {
        width: 72px;
        height: 36px;
        padding: 0px !important;

        a {
            height: 36px !important;
            width: 36px !important;
            padding: 0 !important;
            border-radius: 0 !important;
            left: 0 !important;
            text-align: center !important;

            i.fas.fa-moon {
                transform: translate(0) !important;
                margin-right: 0 !important;
            }
        }
    }
    > .container {
        opacity: 0;
        animation: fadeIn 1s ease-out 0s forwards;
        z-index: 11;
        transition: all .2s;
    }
    &.isOpen {
        > .container {
            background-color: #1b2a32 !important;
        }
    }
    &.dropShadow {
      box-shadow: 0px 6px 15px -3px rgba(0,0,0,0.2);
    }
    .nav-select {
        height: 70%;
        width: 41%;
        position: absolute;
        top: 5px;
        z-index: 0;
        
        &:nth-child(1) {
        left: 5px;
        }
        &:nth-child(2) {
        left: 35px;
        background-color: #1B2A32 !important;
        display: none;
        }
    }
    
    #theme-square {
        left: 0;
        top: 0;
        height: 37px;
        width: 36px;
        position: absolute;
        background: $gray-200;
        transform: translateX(0px);
        box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.1 );
        transition: transform .2s ease-in;
    }
    i {
        color: white;
    }
    #toggle-pride-mode {
        cursor: pointer;
        img {
            height: 22px;
        }
    }
    
    #toggle-dark-mode {
        left: 2px;
        i {
            color: #1B2A32;
        }
    }
    @media(max-width: 991.98px){
        #theme-select {
            display: none !important;
        }
    }
    .nav-arrow {
        transform: rotate(45deg) translateY(-6px);
        -webkit-transform: rotate(45deg) translateY(-6px);
        border: solid white;
        border-width: 0 1px 1px 0;
        display: inline-block;
        padding: 3px;
        margin-left: 5px;
    }
    #dropdown-menus {
        height: 60px;
        right: 0;
        top: 0;
        width: 100%;
        cursor: pointer;
    }
    .dropdown {
        height: 40px;

        &.show {
            .drop-menu {
                .h5,
                .topic-title,
                .dropdown-item {
                    opacity: 1;
                    transition: opacity .2s ease-out .1s;
                }
                padding: 30px 0 20px;
                height: auto;
            }
        } 
            
    }
    #learn {
        right: 456px;
        width: 130px;

        .drop-menu {
            width: 530px;
            left: -170px;
            
            .menu-split-left {
                width: 320px;
            }
            .menu-split-right {
                width: 180px;
            }
        }
    }
    #topics {        
        right: 454px;
        width: 135px;
    }
    #tanzutv {
        right: 300px;
        width: 149px;
    }
    #community {
        right: 139px;
        width: 156px; 
    }
    .drop-target {
        height: 40px;
    }
    .drop-menu {
        position: absolute;
        top: 100%;
        left: 5px;
        z-index: $zindex-dropdown;
        float: left;
        text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
        list-style: none;
        height: 0;
        overflow: hidden;
        box-sizing: border-box;
        padding: 0;
        
        .h5,
        .topic-title {
            opacity: 0;
            transition: opacity .5s;
            margin-top: 1rem;
        }
        .dropdown-item {
            color: $link;
            opacity: 0;
            transition: opacity .5s;
        }
        .h5, b {
            padding: 0.25rem 1rem;
        }
    }
    #scope {
        background: $primary;
        height: 500px;
        transition: all .2s ease-out;
        height: 400px;
        top: 60px;
        box-shadow: 0px 6px 15px -3px rgba(0,0,0,0.2);
        position: absolute;
        
        &.learn-scope {
            left: -227px;
            width: 550px;
            height: 485px;
        }
        &.tanzutv-scope {
            left: 87px;
            width: 296px;
            height: 350px;
        }
        &.community-scope {
            left: 247px;            
            width: 150px;
            height: 120px;
        }
    }

    .dropdown-item:hover, .dropdown-item:focus {
        background: $dark;
        border-radius: 2px;
    }
    #by-type {
        padding: 0.25rem 1.5rem;
    }
    b {
        font-weight: 500 !important;
        -webkit-font-smoothing: antialiased;
    }
}
#mobile-nav {
    transform: translateY(-100%);
    position: fixed;
    overflow-y: scroll;
    width: 100%;
    height: 100%;
    max-width: 100%;
    padding: 80px 60px 60px 40px;
    top: 0;
    right: 0;
    z-index: 10;
    transition: transform .35s cubic-bezier(.694,0,.335,1);

    ul {
        opacity: 0;
        transition: all .2s ease-out; 
    }
    &.isOpen {
        transform: translateY(0);
        
        ul {
            transition: all .35s ease-out .2s; 
            opacity: 1;
        }
    }
    .mobile-nav-title {
        font-size: 1.2rem;
        color: white;
    }
}
@media(max-width:991px) {
    .nav-item {
        position: static;
    }
    nav {
        padding: 0 !important;
        > .container {
            padding-top: 10px;
            padding-bottom: 10px;
        }
    }
}
@media(max-width:1000px) and (min-width: 992px) {
    
}
.promo-nav-banner {
    top: 0;
    position: fixed;
    padding-top: 5rem !important;
    width: 100%;
    z-index: 3;
}
@media(max-width: 991px){
    .promo-nav-banner {
        position: static;
        width: 100%;
        padding: 0 !important;
    }
}

